# type-providers

./: LICENSE  Proposal.cabal  README.md  changelog.md  stack.yaml  type-it  type-providers.cabal  type-these
src/: ProvidersList.hs  TypeProviders.hs
src/Data/TypeProvider/: Util.hs
