-- Build information for the package.
name:                type-providers
version:             0.1
synopsis:            Automatic setup generation and type discovery
description:         Takes input files, and tries a trusted list of Haskell parse libraries
                     to take data out of it.
                     .
                     To register your own parser - please submit a GitHub pull request that:
                     * updates the type providers list in README.md
                     * updates declarations in src/ProvidersList.hs
                     .
                     See example on  <https://github.com/mgajda/type-providers>
                     for details.
homepage:            https://github.com/mgajda/json-autotype
license:             BSD3
license-file:        LICENSE
stability:           stable
author:              Michal J. Gajda
maintainer:          mjgajda@gmail.com
copyright:           Copyright by Michal J. Gajda '2018
category:            Data, Tools
build-type:          Simple
extra-source-files:  README.md changelog.md
cabal-version:       >=1.10
bug-reports:         https://github.com/mgajda/json-autotype/issues
tested-with:         GHC==7.8.4, GHC==7.10.3, GHC==7.6.3, GHC==8.0.1, GHC==8.2.2, GHC==8.4.1
source-repository head
  type:     git
  location: https://github.com/mgajda/json-autotype.git

executable type-these
  main-is:             TypeProviders.hs
  other-modules:       ProvidersList
                       Data.TypeProvider.Util
  other-extensions:    TemplateHaskell,
                       ScopedTypeVariables,
                       OverloadedStrings,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       DeriveDataTypeable,
                       DeriveGeneric,
                       RecordWildCards
  build-depends:       base                 >=4.3  && <4.12,
                       --GenericPretty        >=1.2  && <1.3,
                       --aeson                >=0.7  && <1.4,
                       magic,
                       --bytestring           >=0.9  && <0.11,
                       containers           >=0.3  && <0.6,
                       directory,
                       filepath             >=1.3  && <1.5,
                       --hashable             >=1.2  && <1.3,
                       --hint                 >=0.4  && <0.6,
                       --lens                 >=4.1  && <4.17,
                       --mtl                  >=2.1  && <2.3,
                       optparse-applicative >=0.12 && <1.0,
                       --pretty               >=1.1  && <1.3,
                       process              >=1.1  && <1.7,
                       MissingH, parsec
                       --scientific           >=0.3  && <0.5,
                       --text                 >=1.1  && <1.4,
                       --uniplate             >=1.6  && <1.7,
                       --unordered-containers >=0.2  && <0.3,
                       --vector               >=0.9  && <0.13,
                       --yaml                 >=0.8  && <0.9
  hs-source-dirs: src/
  default-language:    Haskell2010

